se cambio la carpeta build por dist y además se añadio en gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 ### mis archivos ignorados ###
 build/
+dist/
 
 ### Linux ###
 *~
@@ -91,7 +92,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-#build/Release
+build/Release
 
 # Dependency directories
 node_modules/
